Adding ability to hide and show the add form

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -4,7 +4,9 @@
             <h1>Your coffee makers</h1>
         </header>
 
-        {{> newCoffeeMaker }}
+        <div class="addNew">
+            {{> newCoffeeMaker }}
+        </div>
 
         <ul>
             {{#each coffeeMakers }}
