--- a/imports/ui/coffeeMaker.html
+++ b/imports/ui/coffeeMaker.html
@@ -1,6 +1,7 @@
 <template name="coffeeMaker">
     <li>
         <button class="delete">&times;</button>
+        <button class="edit">Edit</button>
         <div class="content">
             <div>
                 <span>
