Adding Add text to add button

--- a/imports/ui/newCoffeeMaker.html
+++ b/imports/ui/newCoffeeMaker.html
@@ -1,7 +1,7 @@
 <template name="newCoffeeMaker">
     {{#unless showForm}}
-        <div>
-            <button class="showNewForm">&plus;</button>
+        <div class="showNew">
+            <button class="showNewForm">Add<strong>&plus;</strong></button>
         </div>
     {{/unless}}
     {{#if showForm}}
