Updating url placeholder and required fields

--- a/imports/ui/coffeeMaker.html
+++ b/imports/ui/coffeeMaker.html
@@ -10,11 +10,11 @@
                 <div class="content">
                     <div class="formgroup">
                         <label>Name:</label>
-                        <input type="text" name="name" id="name" placeholder="Name your coffee maker" value="{{name}}" />
+                        <input type="text" name="name" id="name" placeholder="Name your coffee maker" value="{{name}}" required />
                     </div>
                     <div class="formgroup">
                         <label>URL:</label>
-                        <input type="url" name="url" id="url" placeholder="Url of smart coffee maker" value="{{url}}" />
+                        <input type="url" name="url" id="url" placeholder="Url including http[s]://" value="{{url}}" required />
                     </div>
                     <div class="formgroup">
                         <label>Location:</label>
