--- a/imports/ui/newCoffeeMaker.html
+++ b/imports/ui/newCoffeeMaker.html
@@ -9,11 +9,11 @@
             <h5>Add a new coffee maker</h5>
             <div class="formgroup">
                 <label>Name:</label>
-                <input type="text" name="name" id="name" placeholder="Name your coffee maker" />
+                <input type="text" name="name" id="name" placeholder="Name your coffee maker" required />
             </div>
             <div class="formgroup">
                 <label>URL:</label>
-                <input type="url" name="url" id="url" placeholder="Url of smart coffee maker" />
+                <input type="url" name="url" id="url" placeholder="Url including http[s]://" required />
             </div>
             <div class="formgroup">
                 <label>Location:</label>
