Spliting coffee list into its own template

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -8,10 +8,6 @@
             {{> newCoffeeMaker }}
         </div>
 
-        <ul>
-            {{#each coffeeMakers }}
-                {{> coffeeMaker }}
-            {{/each}}
-        </ul>
+        {{> coffeeMakerList }}
     </div>
 </body>
