Update coffeeMaker model and new user rest API
Change coffeeMaker model to use token instead of URL. Token is auto
generated in insert and not changeable at the moment.
Created users rest API.
Moved all CRUD collection logic into Meteor methods and now both front
end and rest code all calls into the same meteor methods for CRUD
functionality.
Created rest helper methods for generic error response messages.

--- a/imports/ui/coffeeMaker.html
+++ b/imports/ui/coffeeMaker.html
@@ -13,8 +13,8 @@
                         <input type="text" name="name" id="name" placeholder="Name your coffee maker" value="{{name}}" required />
                     </div>
                     <div class="formgroup">
-                        <label>URL:</label>
-                        <input type="url" name="url" id="url" placeholder="Url including http[s]://" value="{{url}}" required />
+                        <label>Token:</label>
+                        <span>{{token}}</span>
                     </div>
                     <div class="formgroup">
                         <label>Location:</label>
@@ -61,10 +61,17 @@
                             (Public)
                         {{/if}}
                     </span>
+                    <span>
+                        {{#if on}}
+                            (ON)
+                        {{else}}
+                            (OFF)
+                        {{/if}}
+                    </span>
                 </div>
                 <div>
                     <span>
-                        {{url}}
+                        Token: {{token}}
                     </span>
                 </div>
                 <div>
