Add support for lat and long data
When a coffee maker is create the lat and long values can be saved.

--- a/imports/ui/coffeeMaker.html
+++ b/imports/ui/coffeeMaker.html
@@ -79,6 +79,11 @@
                         MongoDB ID: {{_id}}
                     </span>
                 </div>
+                <div>
+                    <span>
+                        Lat: {{latitude}} Long: {{longitude}}
+                    </span>
+                </div>
             </div>
         </li>
     {{/if}}
