Remove insecure and add user login

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,6 +2,10 @@
     <div class="container">
         <header>
             <h1>Your coffee makers</h1>
+
+            <div class="login">
+                {{> loginButtons }}
+            </div>
         </header>
 
         <div class="addNew">
