--- a/imports/ui/coffeeMaker.html
+++ b/imports/ui/coffeeMaker.html
@@ -84,6 +84,9 @@
                         Lat: {{latitude}} Long: {{longitude}}
                     </span>
                 </div>
+                <div>
+                    <span>Owned by: {{username}} ({{owner}})</span>
+                </div>
             </div>
         </li>
     {{/if}}
