Remove autopublish and add mine filter
Remove autopublish package. Adding filtering for coffee makers owned by
user.

--- a/imports/ui/coffeeMakerList.html
+++ b/imports/ui/coffeeMakerList.html
@@ -1,4 +1,11 @@
 <template name="coffeeMakerList">
+    {{#if currentUser}}
+        <div class="showMine">
+            <label>Only show mine:
+                <input type="checkbox" name="mine" id="mine" checked="{{mineChecked}}" />
+            </label>
+        </div>
+    {{/if}}
     <ul>
         {{#each coffeeMakers }}
             {{> coffeeMaker }}
